--- a/app/src/main/res/layout/activity_set_interval.xml
+++ b/app/src/main/res/layout/activity_set_interval.xml
@@ -5,26 +5,25 @@
     android:id="@+id/constraintLayout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorSetIntervalBackground"
+    android:background="@color/colorMainBackground"
     tools:layout_editor_absoluteY="81dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/cl_garden"
         android:layout_width="match_parent"
         android:layout_height="320dp"
-
-
-        android:background="@android:color/holo_blue_light">
+        android:background="#488fa9"
+        >
 
 
         <ImageView
             android:id="@+id/iv_grass_background"
 
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher_grass_foreground"
+            android:src="@drawable/app_background_lawn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -37,7 +36,7 @@
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0"
+
         android:gravity="center"
         android:text="Time:"
         android:textSize="25sp"
@@ -50,7 +49,7 @@
         android:id="@+id/np_time_setter"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0"
+
         android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +60,7 @@
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0"
+
         android:gravity="center"
         android:text="minutes"
         android:textSize="25sp"
@@ -74,7 +73,6 @@
         android:id="@+id/button_test"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0"
         android:text="test Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +83,6 @@
         android:id="@+id/button_test2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +110,7 @@
         android:id="@+id/button_start"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0"
+
         android:padding="8dp"
         android:text="@string/str_begin"
         android:textAllCaps="false"
